# comp0034-wk2

./: README.md  pyproject.toml  requirements.txt
data/: data_to_db_create_db.py  data_to_db_dbexists.py  paralympic_events.csv
paralympics/: __init__.py  models.py  paralympics.py
practice/: __init__.py
