[project]
name = "paralympics"
version = "1.0.0"
description = "COMP0034 Week 2 coding activities"
dependencies = [
    "flask",
    "Flask-SQLAlchemy"
]

[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["paralympics"]
